new docker attempt

--- a/docker_helpers/Dockerfile
+++ b/docker_helpers/Dockerfile
@@ -1,4 +1,4 @@
-RUN apt-get update && apt-get install -y netcat
+RUN apt-get update && apt-get install -y netcat jq
 
 RUN useradd -m -u 1000 user
 RUN chown -R user:user / || true
